[gd_scene load_steps=4 format=2]

[ext_resource path="res://menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://black_background.jpg" type="Texture" id=2]
[ext_resource path="res://button03.png" type="Texture" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -262.0
margin_right = 200.0
margin_bottom = 263.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
margin_left = 35.0
margin_top = 60.0
margin_right = 365.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 330.0
margin_bottom = 14.0
text = "Menu"
align = 1

[node name="CommandButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_left = 55.0
margin_top = 18.0
margin_right = 275.0
margin_bottom = 73.0
rect_min_size = Vector2( 220, 55 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
expand = true

[node name="CommandLabel" type="Label" parent="NinePatchRect/VBoxContainer/CommandButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.999985
margin_bottom = 0.999996
text = "Command Following"
align = 1
valign = 1

[node name="TrajectoryButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_left = 55.0
margin_top = 77.0
margin_right = 275.0
margin_bottom = 132.0
rect_min_size = Vector2( 220, 55 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
expand = true

[node name="Trajectory Following" type="Label" parent="NinePatchRect/VBoxContainer/TrajectoryButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.99998
margin_bottom = 2.0
text = "Trajectory Following"
align = 1
valign = 1

[node name="CurvedTrajectoryButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_left = 55.0
margin_top = 136.0
margin_right = 275.0
margin_bottom = 191.0
rect_min_size = Vector2( 220, 55 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
expand = true

[node name="Curved Trajectory Following" type="Label" parent="NinePatchRect/VBoxContainer/CurvedTrajectoryButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.99998
margin_bottom = 2.0
text = "Curved Trajectory Following"
align = 1
valign = 1

[node name="UserResults" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_left = 55.0
margin_top = 195.0
margin_right = 275.0
margin_bottom = 250.0
rect_min_size = Vector2( 220, 55 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
expand = true

[node name="UserInfoLabel" type="Label" parent="NinePatchRect/VBoxContainer/UserResults"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -3.00002
margin_bottom = 4.0
text = "User Results"
align = 1
valign = 1

[node name="UserInfo" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_left = 55.0
margin_top = 254.0
margin_right = 275.0
margin_bottom = 309.0
rect_min_size = Vector2( 220, 55 )
rect_clip_content = true
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
expand = true

[node name="UserInfoLabel" type="Label" parent="NinePatchRect/VBoxContainer/UserInfo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -3.00002
margin_bottom = 4.0
text = "User Info"
align = 1
valign = 1

[node name="Questionnaires" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_left = 55.0
margin_top = 313.0
margin_right = 275.0
margin_bottom = 368.0
rect_min_size = Vector2( 220, 55 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
expand = true

[node name="QuestionnairesLabel" type="Label" parent="NinePatchRect/VBoxContainer/Questionnaires"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -0.5
margin_right = -4.00002
margin_bottom = 3.5
text = "Questionnaires"
align = 1
valign = 1

[node name="DeleteRecentEntry" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_left = 55.0
margin_top = 372.0
margin_right = 275.0
margin_bottom = 427.0
rect_min_size = Vector2( 220, 55 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
expand = true

[node name="Delete Recent Entry" type="Label" parent="NinePatchRect/VBoxContainer/DeleteRecentEntry"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -0.5
margin_right = -4.00002
margin_bottom = 3.5
text = "Delete Recent Entry"
align = 1
valign = 1

[connection signal="pressed" from="NinePatchRect/VBoxContainer/CommandButton" to="." method="_on_CommandButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/TrajectoryButton" to="." method="_on_TrajectoryButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/CurvedTrajectoryButton" to="." method="_on_CurvedTrajectoryButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/UserResults" to="." method="_on_UserResults_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/UserInfo" to="." method="_on_UserInfo_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/Questionnaires" to="." method="_on_Questionnaires_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/DeleteRecentEntry" to="." method="_on_DeleteRecentEntry_pressed"]
